--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jake Schultz # your name (or website title) here
-logo: "/images/Ozzy.png?raw=true" # your photo (or logo) here
+logo: "/images/4.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  I am a 3rd year Computer Science student at Cal State LA. 
   <br><br>
   Second description 
   <br><br>
