--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Jake Schultz # your name (or website title) here
 logo: "/images/4.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I am a 3rd year Computer Science student at Cal State LA. 
+  I am a 3rd year Computer Science student at Cal State LA. I am involved with ACM on campus and I am participating in the Spring 2021 project involving AI. I have coding experience with Java, C++, and Python. 
+  I have website development experience with html, css, bootstrap, jstl, javascript and jsp. This page is using markdownd. 
   <br><br>
-  Second description 
+  In my free time I am learning to make a game using the pygame library in python, and I am learning how to make sprites for some simple games.
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
+  # <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
