--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jake Schultz # your name (or website title) here
-logo: "/images/4.jpg?raw=true" # your photo (or logo) here
+logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I am a 3rd year Computer Science student at Cal State LA. I am involved with ACM on campus and I am participating in the Spring 2021 project involving AI. I have coding experience with Java, C++, and Python. 
   I have website development experience with html, css, bootstrap, jstl, javascript and jsp. This page is using markdownd. 
