--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jake Schultz # your name (or website title) here
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I am a 3rd year Computer Science student at Cal State LA. I am involved with ACM on campus and I am participating in the Spring 2021 project involving AI. I have coding experience with Java, C++, and Python. 
+  I am a 3rd year Computer Science student at Cal State LA. I am involved with ACM on campus and I recently finished the Spring 2021 project leveraging AI. I have coding experience with Java, C++, and Python. 
   I have website development experience with html, css, bootstrap, jstl, javascript and jsp. This page is using markdownd. 
   <br><br>
   In my free time I am learning to make a game using the pygame library in python, and I am learning how to make sprites for some simple games.
