--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.linkedin.com/in/jacob-schultz-26493a207">View My LinkedIn Profile</a>
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: G-7PNTHD8P2R # your Google Analytics tracking ID here
